--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,11 @@ spring:
   application:
     name: tgbot.gitlab
 
-bot:
-  name: gitlabEcovisionBot
-  token: 7468783459:AAEOrE-Ghgy_uLXYU4d41y_PRFnpcCtmzLw
+gitlab-bot:
+  bot-token: 7468783459:AAEOrE-Ghgy_uLXYU4d41y_PRFnpcCtmzLw
+  bot-name: gitlabEcovisionBot
+
+gitlab:
+  url: https://dev1.apheco.ru
+  # expires 2025-07-16
+  token: glpat-5kF1S3UQfAVAtBJMD5uR
