refactor: хардкод перенесен в application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,4 @@ gitlab:
   url: https://dev1.apheco.ru
   # expires 2025-07-16
   token: glpat-5kF1S3UQfAVAtBJMD5uR
+  instance: gitlab-instance-4f4a9c0a
