feat: релизы создаются в подстранице: releases

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     name: tgbot.gitlab
 
 gitlab-bot:
-  bot-token: 7468783459:AAEOrE-Ghgy_uLXYU4d41y_PRFnpcCtmzLw
-  bot-name: gitlabEcovisionBot
+  bot-token: 6743929505:AAFAkwdfc0SIIsTiIeawMiQeJR14PBHWY9o
+  bot-name: gitlabEcovisionDevBot
 
 gitlab:
   url: https://dev1.apheco.ru
