--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -46,4 +46,4 @@ jobs:
       - name: checkout repo
         uses: actions/checkout@v4
       - name: docker-compose
-        run: docker-compose up -d
+        run: docker-compose up
