--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 HELP.md
 .gradle
 build/
+.env.dev
+.env.local
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+src/main/resources/local.secrets.yml
 
 ### STS ###
 .apt_generated
