feat: секреты скрыты в environment variable WIP #1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - GITLAB-BOT.BOT-TOKEN=${BOT-TOKEN}
-      - GITLAB-BOT.BOT-NAME=${BOT-NAME}
-      - GITLAB.URL=${GITLAB-URL}
-      - GITLAB.TOKEN=${GITLAB-TOKEN}
-      - GITLAB.INSTANCE=${GITLAB-INSTANCE}
-      - NEXUS.USERNAME=${NEXUS-USERNAME}
-      - NEXUS.PASSWORD=${NEXUS-PASSWORD}
+      - GITLAB-BOT.BOT-TOKEN=${BOT_TOKEN}
+      - GITLAB-BOT.BOT-NAME=${BOT_NAME}
+      - GITLAB.URL=${GITLAB_URL}
+      - GITLAB.TOKEN=${GITLAB_TOKEN}
+      - GITLAB.INSTANCE=${GITLAB_INSTANCE}
+      - NEXUS.USERNAME=${NEXUS_USERNAME}
+      - NEXUS.PASSWORD=${NEXUS_PASSWORD}
