--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -4,6 +4,36 @@ on:
     branches: [ "main","develop" ]
 
 jobs:
+  prepare-environment:
+    runs-on: self-hosted # Запускаем на раннере, который настроили до этого.
+    needs: test # Запускаем только если джоба test прошла успешно
+    steps:
+      - name: Stop and remove containers, networks
+        run: |
+          if [ -f docker-compose.yml ]; then
+            docker-compose down
+          fi
+      - name: Remove unused data
+        run: docker system prune -a -f
+  deploy:
+    runs-on: self-hosted
+    needs: prepare-environment
+    env:
+      GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+      GITLAB_URL: ${{ secrets.GITLAB_URL }}
+      GITLAB_INSTANCE: ${{ secrets.GITLAB_INSTANCE }}
+      NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+      NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+      BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+      BOT_NAME: ${{ secrets.BOT_NAME }}
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
+      - name: docker-compose
+        run: docker-compose up
+
+  
+  
   #  test: # Название джобы
   #    runs-on: ubuntu-latest   # Где должна выполняться джоба.
   #    env:
@@ -36,30 +66,3 @@ jobs:
   #      - name: run tests
   #        run: ./gradlew test # Запускаем тесты с помощью Gradle.
   #
-  #  prepare-environment:
-  #    runs-on: self-hosted # Запускаем на раннере, который настроили до этого.
-  #    needs: test # Запускаем только если джоба test прошла успешно
-  #    steps:
-  #      - name: Stop and remove containers, networks
-  #        run: |
-  #          if [ -f docker-compose.yml ]; then
-  #            docker-compose down
-  #          fi
-  #      - name: Remove unused data
-  #        run: docker system prune -a -f
-  deploy:
-    runs-on: self-hosted
-    needs: prepare-environment
-    env:
-      GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
-      GITLAB_URL: ${{ secrets.GITLAB_URL }}
-      GITLAB_INSTANCE: ${{ secrets.GITLAB_INSTANCE }}
-      NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
-      NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
-      BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-      BOT_NAME: ${{ secrets.BOT_NAME }}
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v4
-      - name: docker-compose
-        run: docker-compose up
