--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - gitlab-bot.bot-token=${BOT_TOKEN}
-      - gitlab-bot.bot-name=${BOT_NAME}
-      - gitlab.url=${GITLAB_URL}
-      - gitlab.token=${GITLAB_TOKEN}
-      - gitlab.instance=${GITLAB_INSTANCE}
-      - nexus.username=${NEXUS_USERNAME}
-      - nexus.password=${NEXUS_PASSWORD}
+      - gitlab-bot.bot-token=${$BOT_TOKEN}
+      - gitlab-bot.bot-name=${$BOT_NAME}
+      - gitlab.url=${$GITLAB_URL}
+      - gitlab.token=${$GITLAB_TOKEN}
+      - gitlab.instance=${$GITLAB_INSTANCE}
+      - nexus.username=${$NEXUS_USERNAME}
+      - nexus.password=${$NEXUS_PASSWORD}
