--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,29 @@
 spring:
-  config:
-    import: optional:local.secrets.yml
   application:
     name: tgbot.gitlab
+
+gitlab-bot:
+  bot-token: 6743929505:AAFAkwdfc0SIIsTiIeawMiQeJR14PBHWY9o
+  bot-name: EcovisionBot
+gitlab:
+  url: https://dev1.apheco.ru
+  token: glpat-5kF1S3UQfAVAtBJMD5uR
+  instance: gitlab-instance-4f4a9c0a
+nexus:
+  username: nx-ecovision-admin
+  password: 7gEKRbefbYugEDFhvnJo
+
+#gitlab-bot:
+#  bot-token: ${gitlab-bot.bot-token}
+#  bot-name: ${gitlab-bot.bot-name}
+#
+#gitlab:
+#  url: ${gitlab.url}
+#  # expires 2025-07-16
+#  token: ${gitlab.token}
+#  instance: ${gitlab.instance}
+#nexus:
+#  username: ${nexus.username}
+#  password: ${nexus.password}
+#
+
