--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -26,7 +26,7 @@ jobs:
             sdk install gradle 7.4.2
           fi
       - name: run tests
-        with:
+        env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
         run: ./gradlew test # Запускаем тесты с помощью Gradle.
 
