feat: попытка вынести в docker-compose.yml #5

--- a/.github/workflows/deploy-job.yml
+++ b/.github/workflows/deploy-job.yml
@@ -27,7 +27,7 @@ jobs:
           fi
       - name: run tests
         env:
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          BOT_TOKEN: ${{ vars.BOT_TOKEN }}
         run: ./gradlew test # Запускаем тесты с помощью Gradle.
 
   prepare-environment:
